force-app/main/default/objects/sf_devops__Branch__c/fields/sf_devops__Ignore_Rules__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Ignore_Rules__c</fullName>
    <description>Stores Ignore Rules</description>
    <label>Ignore Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>