force-app/main/default/objects/sf_devops__Branch__c/fields/sf_devops__Recompute_Visible_Changes__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Recompute_Visible_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>.forceignore needs to be applied to visible changes.</description>
    <inlineHelpText>.forceignore needs to be applied to visible changes.</inlineHelpText>
    <label>Recompute Visible Changes</label>
    <type>Checkbox</type>
</CustomField>