force-app/main/default/objects/sf_devops__Branch__c/fields/sf_devops__Remote_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Reference_Date__c</fullName>
    <description>Stores the last time Remote_Reference__c has been updated in the Branch__c.</description>
    <label>Remote Reference Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>