force-app/main/default/objects/sf_devops__Branch__c/fields/sf_devops__Repository__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Repository__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The repository owner of this branch</description>
    <label>Repository</label>
    <referenceTo>sf_devops__Repository__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>